--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,128 +1,3 @@
-<<<<<<< Updated upstream
-*{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 200;
-}
-
-h1{
-    text-align: center;
-    font-weight: bold;
-}
-
-#photo{
-    width: 200px;
-    height: auto;
-}
-
-.subtitle{
-    color: rgb(107 114 128 / 0.89);
-    text-transform: uppercase;
-}
-
-
-
-
-
- section {
-
-    /* margen (espacio externo) superior, derecho, abajo e izquierda */
-    margin: 4px 2px 8px 2px; 
-
-    /* borde de grosor 0.2 en puntos, estilo sólido y color hexadecimal #cedddd  */
-    border: 0.2pt solid #cedddd; 
-
-    /* relleno (espacio interno) de 
-    1.5% en la parte superior e inferior y 
-    0.8% a los lados derecho e izquierdo. */
-
-    padding: 1.5% 0.8%; 
-
-    /* reemplazan el 0.8% inicial en el relleno izquierdo y derecho, 
-    dándoles un valor específico de 1.2% para esos lados. */
-
-    padding-left: 1.2%; 
-    padding-right: 1.2%; 
-
-
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    border-radius: 20px;
-    
-
-      /* sombra a un elemento */
-
-    -webkit-box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.1);;
-    -moz-box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.1);;
-    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.1);;
- }
-
-
-
-
-#formulario{
-    border: 1px solid #ddd;
-    padding: 20px;
-    border-radius: 10px;
-    -webkit-box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.1);
-    -moz-box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.1);
-    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.1);
-    max-width: 600px;
-    margin: 20px auto;
-}
-
-
- section form {
-     /* Modelo de diseño en cuadrícula */
-     display: grid;                                 
-     row-gap: 0.5rem;
- }
-
- nav ul {
-
-     /* Modelo de diseño flexible */
-     display: flex;                                 
-     justify-content: space-around;
-    
- }
-
-
- #resumen {
-
-    /* Modelo de diseño flexible */
-  display: flex;
-
-  /* Distribuye el espacio entre y alrededor
-     de los items en el eje principal */
-  justify-content: space-evenly;
-
-
-  /* Alinea los elementos al centro dentro
-     del bloque respecto con el eje transversal */
-  align-items: center;
-
-  /* Eje principal: por columna */
-  flex-direction: column;
-
-  /* Altura de 24% del área de visualización */
-  height: 24vh;
-
-  /* Apilamiento de elementos: ajustado 
-  hasta ocupar el máximo */
-  flex-wrap: wrap; 
-
-}
-
-#resumen h2, #resumen p {
-  width: 50%;
-}
-
-#resumen img {
-    max-width: 50%;
-}
-
-
-
-=======
 :root {
     --color-principal: rgb(50, 111, 255); /*pruebas :u*/
     --color-secundario: #333;   
@@ -301,17 +176,452 @@ section ul {
 .icon-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-    gap: 30px;
+    justify-content: center; 
+    gap: 20px; 
     padding-top: 10px;
-    padding-left: 20em;
-    padding-right: 20em;
 }
 
 .icon-container img {
-    width: 10vw; /* Tamaño de los íconos relativo al ancho de la ventana */
-    max-width: 160px; /* Tamaño máximo para evitar que crezcan demasiado */
-    height: auto; /* Mantiene la proporción */
-    flex-basis: calc(50% - 20px); /* Dos columnas de íconos */
+    width: 120px; 
+    max-width: 150px; 
+    height: auto;
+    flex: 1 1 calc(50% - 40px); 
 }
->>>>>>> Stashed changes
+
+
+/* Variables */
+:root {
+    --blanco: #FFFFFF;
+    --oscuro: #212121;
+    --primario: #ffc107;
+    --secundario: #0097a7;
+    --gris: #757575;
+  
+    --fuentes-principales: 'Krub', sans-serif;
+  }
+  
+  /* Generales */
+  html {
+    font-size: 62.5%;
+    box-sizing: border-box;
+  }
+  
+  *, *:before, *:after {
+    box-sizing: inherit;
+  }
+  
+  body {
+    font-size: 16px;
+    font-family: var(--fuentes-principales);
+  }
+  
+  a {
+    text-decoration: none;
+  }
+  
+  h1, h2, h3 {
+    text-align: center;
+    margin: 2.5rem 0;
+  }
+
+  h2{
+    text-align: left;
+  }
+  
+  h1 {
+    font-size: 3.8rem;
+  }
+  
+  h2 {
+    font-size: 2.8rem;
+  }
+  
+  h3 {
+    font-size: 1.8rem;
+  }
+  
+  img {
+    max-width: 100%;
+    display: block;
+  }
+  
+  .contenedor {
+    max-width: 100rem;
+    margin: 0 auto;
+  }
+  
+  /* Utilitarias */
+  .w-300 {
+    font-weight: 300;
+  }
+  
+  .w-500 {
+    font-weight: 500;
+  }
+  
+  .w-700 {
+    font-weight: 700;
+  }
+  
+  .uppercase {
+    text-transform: uppercase;
+  }
+  
+  .ls-1 {
+    letter-spacing: 1px;
+  }
+  
+  .g-2c {
+    display: grid;
+    grid-template-columns: 25% 75%;
+    gap: 1rem;
+  }
+  
+  .boton {
+    background-color: var(--secundario);
+    color: var(--blanco);
+    padding: 1rem 3rem;
+    text-decoration: none;
+    font-size: 1.7rem;
+    text-transform: uppercase;
+    border-radius: .5rem;
+    width: 90%;
+    text-align: center;
+    border: none;
+    text-shadow: 0px 0px 5px rgba(0,0,0,0.58);
+  }
+  
+  /* Header */
+  .header {
+    background-color: var(--blanco);
+    width: 100%;
+  }
+  
+  .titulo {
+    font-size: 4rem;
+    
+    margin: 2rem 0;
+  }
+  
+  .titulo span {
+    font-size: 2.8rem;
+  }
+  
+  /* Nav */
+  .nav-bg {
+    background-color: var(--secundario);
+  }
+  
+  .navegacion {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  @media (min-width: 768px) {
+    .navegacion {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+  }
+  
+  .navegacion a {
+    display: block;
+    text-align: center;
+    padding: 1.5rem;
+    color: var(--blanco); 
+    font-weight: 700;
+    font-size: 2rem;
+  }
+  
+  .navegacion a:hover {
+    background-color: var(--primario);
+    color: var(--oscuro);
+  }
+  
+  
+  /* Body */
+  
+  /* Hero */
+  .hero {
+    background-image: url(../img/hero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 45rem;
+    position: relative;
+  }
+  
+  .hero h1 {
+    color: var(--blanco);
+  }
+  
+  .contenido-hero {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.645);
+    width: 100%;
+    height: 100%;
+  
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: var(--blanco);
+  }
+  
+  .contenido-hero img {
+    width: 20rem;
+    height: 20rem;
+  }
+  
+  .contenido-hero h1 {
+    margin: 0;
+  }
+  
+  @media (min-width: 768px) {
+      .contenido-hero h1{
+        margin: 2.5rem 0;
+      }
+  }
+  
+  .hero-informacion {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+  }
+  
+  @media (max-width: 768px) {
+    .hero-informacion {
+      flex-direction: column;
+      gap: 0px;
+    }
+  
+    .hero-informacion p {
+      margin: 0.5rem auto 0;
+    }
+  }
+  
+  .svg-hero {
+    width: 24px;
+  }
+  
+  .imagen-perfil {
+    border-radius: 50%;
+  }
+  
+  /* Datos Personales */
+  
+  .informacion-personal {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .informacion-personal h2 {
+    font-size: 2rem;
+  }
+  
+  .info-per {
+    text-align: center;
+
+  }
+  
+  #habilidades ul {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 0;
+    list-style-type: square;
+    justify-content: center;
+    max-width: 800px;
+}
+
+#habilidades ul li {
+    flex: 1 1 200px; /* Cada habilidad ocupa un mínimo de 200px y es flexible */
+    text-align: left; /* Alinea el texto al centro */
+    margin-left: 4vh;
+}
+  
+  .info-per p {
+    margin: 1rem;
+  }
+  
+  /* Contenido Principal */
+  
+  .campo-cont-principal {
+    margin-bottom: 5rem;
+  }
+  
+  @media (max-width: 768px) {
+      .contenedor-principal{
+        display: flex;
+        flex-direction: column-reverse;
+      }
+  }
+  
+  .contenido-principal h2, .contenido-principal h3 {
+    text-align: left;
+    position: relative;
+    margin-bottom: 1rem;
+    padding-top: 1rem;
+  }
+  
+  .contenido-principal h2::before {
+    content: "";
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    height: 5px;
+    width: 100%;
+    background-color: var(--secundario);
+  }
+  
+  /* Proyectos */
+  
+  .contenedor-proyectos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 1rem;
+  }
+  
+  .proyecto {
+    background-color: var(--gris);
+    padding: .2rem;
+    margin-bottom: 1rem;
+    position: relative;
+  }
+  
+  .proyecto img {
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+    height: auto;
+  }
+  
+  @media (min-width: 768px) {
+      .proyecto img {
+        height: 36rem;      
+      }
+  }
+  
+  .proyecto .img-overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.645);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: var(--blanco);
+  }
+  
+  .proyecto:hover .img-overlay {
+    opacity: 1;
+  }
+  
+  @media (min-width: 768px) {
+      .contenedor-proyectos {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
+      }
+  
+      .proyecto img {
+        height: 21rem;
+      }
+  }
+  
+  /* Contacto */
+  
+  .formulario {
+    background-color: var(--gris);
+    margin: 0 auto;
+    width: min(70rem, 100%);
+    padding: 2rem;
+    border-radius: 1rem;
+  }
+  
+  .formulario fieldset {
+    border: none;
+  }
+  
+  .formulario legend {
+    color: var(--primario);
+    font-size: 1.8rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-bottom: 2rem;
+  }
+  
+  @media (min-width: 768px) {
+      .contenedor-campos {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: auto auto auto;
+        gap: 1.5rem;
+      }
+      
+      .campo:nth-child(4), .campo:nth-child(5) {
+        grid-column: 1 / 4;
+      }
+  }
+  
+  input, button, textarea {
+    font-family: var(--fuentes-principales);
+    font-size: 100%;
+  }
+  
+  .campo {
+    margin-bottom: 1rem;
+  }
+  
+  .campo label {
+    color: var(--blanco);
+    font-weight: bold;
+    margin-bottom: .5rem;
+    margin-right: 1rem;
+    display: block;
+  }
+  
+  .input-text {
+    width: 100%;
+    border: none;
+    border-radius: .5rem;
+    padding: 1rem;
+  }
+  
+  .enviar .boton {
+    width: 100%;
+  }
+  
+  @media (min-width: 768px) {
+      .enviar {
+        display: flex;
+        justify-content: flex-end;
+      }
+  
+      .enviar .boton {
+        width: fit-content;
+      }
+  }
+  
+  /* Footer */
+  
+  .footer {
+    height: 10rem;
+    background-color: var(--secundario);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .footer p {
+    text-align: center;
+    color: var(--blanco);
+  }
